# tnclean

./: .gitignore  LICENSE  README.md  explode_report.json  final_test.geojson  pyproject.toml  report_components.json  report_default.json  report_disabled.json  report_modular.json  report_no_removal.json  run_pipeline_tests.py  spec.md  test_cli_merged.geojson  test_default_behavior.geojson  test_degree2_nodes.geojson  test_disabled.geojson  test_disconnected.geojson  test_disconnected_result.geojson  test_duplicates.geojson  test_endpoint_only.geojson  test_full_pipeline.geojson  test_japan_components.geojson  test_merged.geojson  test_path_based.geojson  test_single.py  test_small_components.geojson  test_small_components_fixed.geojson  test_with_components.geojson
.claude/: settings.local.json
data/: debug_output.geojson  debug_output_v2.geojson  debug_output_v3.geojson  debug_output_v4.geojson  ex.geojson  test_crossing.geojson  test_user_precision.geojson  test_user_precision_v2.geojson
examples/: README.md  attribute_inheritance.geojson  coincident_lines.geojson  config.yaml  crossing_intersection.geojson  duplicate_edges.geojson  ex_japan_1.geojson  explode_multilinestring.geojson  micro_segments.geojson  multiway_intersection.geojson  parallel_offset.geojson  partial_overlap.geojson  self_intersecting.geojson  simple_network.geojson  snap_near_endpoints.geojson  t_junction.geojson  zigzag_simplify.geojson
src/tnclean/: __init__.py  cli.py  graph.py  ops.py  pipeline.py  types.py
src/tnclean/modules/: __init__.py  deoverlap.py  explode.py  merge_degree2.py  remove_components.py  simplify.py  snap.py  split.py
tests/: __init__.py  conftest.py  test_graph.py  test_ops.py  test_pipeline.py  test_pipeline_features.py  test_property_based.py  test_types.py
